<resources>
    <string name="app_name">Banswara WareHouse</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="set_pin">Set PIN</string>
    <string name="sign_in">Sign IN</string>
    <string name="login">Login</string>
    <string name="banswara_warehouse">Banswara Warehouse</string>
    <string name="welcome_to">Welcome to</string>
    <string name="warehouse_by_banswara">BANSWARA SYNTEX LIMITED</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create a new account</string>
    <string name="pin">PIN</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="msg_sign_in_success">Your account has been\ncreated successfully!</string>
    <string name="error_user_name">Please Enter User Name</string>
    <string name="error_enter_pin">Please Enter PIN</string>
    <string name="error_enter_4_digit_valid_pin">Please enter 4 digit valid PIN</string>
    <string name="error_enter_confirm_pin">Please Enter Confirm PIN</string>
    <string name="error_enter_4_digit_valid_confirm_pin">Please enter 4 digit valid Confirm PIN</string>
    <string name="pin_not_match">Enter PIN &amp; Confirm PIN does not match</string>
    <string name="error_enter_mobile_no">Please enter Mobile Number</string>
    <string name="error_valid_mobile">Please Enter valid 10 digit mobile number</string>
    <string name="proceed">Proceed</string>
    <string name="pending">Pending</string>
    <string name="scanned">Scanned</string>
    <string name="items_shipped">Items Shipped</string>
    <string name="submit">Submit</string>
    <string name="add_new_file">Add New File</string>
    <string name="pending_files">Pending Files</string>
    <string name="list_of_products_scanned">List of Challan Scanned</string>
    <string name="logout">Logout</string>
    <string name="scan_next">Scan Next</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="list_of_challans_scanned_total">List of Challans ( Scanned : %1$s / Total : %2$s)</string>
    <string name="search_by_file_name">Search by File Name</string>
    <string name="refresh_list">Refresh</string>
</resources>