<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="vm"
            type="com.banswara.warehouse.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font_regular"
            android:text="@{vm.isLogin? @string/welcome_to: @string/sign_up}"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/welcome_to" />

        <TextView
            android:id="@+id/tv_warehouse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/font_bold"
            android:text="@{vm.isLogin? @string/warehouse_by_banswara: @string/create_new_account}"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            tools:text="@string/warehouse_by_banswara" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:hint="@string/user_name"
            app:errorEnabled="@{TextUtils.isEmpty(vm.userNameError)}"
            app:layout_constraintTop_toBottomOf="@id/tv_warehouse">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25"
                android:text="@={vm.userName}"
                app:error="@{vm.userNameError}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/mobile_number"
            android:visibility="@{!vm.isLogin}"
            app:layout_constraintTop_toBottomOf="@id/til_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="10"
                android:text="@={vm.mobileNumber}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/pin"
            app:layout_constraintTop_toBottomOf="@id/til_mobile_number"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:text="@={vm.pin}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_round_golden"
            android:onClick="@{vm.signIn}"
            android:visibility="@{!vm.isLogin}"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_golden"
            android:onClick="@{vm.logIn}"
            android:visibility="@{vm.isLogin}"
            android:text="@string/login"
            android:fontFamily="@font/open_sans_bold"
            app:layout_constraintBottom_toTopOf="@id/ll_sign_up" />

        <LinearLayout
            android:id="@+id/ll_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="@{vm.createAccount}"
            android:visibility="@{vm.isLogin}"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_regular"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/tv_sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/tv_create_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
